<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="forgotPasswordVM" type="com.parkease.app.modules.forgotpassword.data.viewmodel.ForgotPasswordVM"/>
    </data>
    <LinearLayout android:id="@+id/linearForgotPassword"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylegray_50">
        <androidx.appcompat.widget.Toolbar
            android:gravity="center_horizontal"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_6pxv"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="center_vertical"
                android:id="@+id/linearRowforgotpasswo"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_16pxv"
                android:layout_marginEnd="@dimen/_24pxh"
                android:layout_marginStart="@dimen/_24pxh"
                android:layout_marginTop="@dimen/_16pxv"
                android:layout_width="match_parent" android:orientation="horizontal">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtForgotpassword"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_5pxh"
                    android:singleLine="true"
                    android:text="@{forgotPasswordVM.forgotPasswordModel.txtForgotpassword}"
                    style="@style/txtPlusJakartaSansromanbold18" tools:text="@string/lbl_forgot_password"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtCancel"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_5pxv"
                    android:layout_marginStart="@dimen/_137pxh"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_4pxh"
                    android:singleLine="true"
                    android:text="@{forgotPasswordVM.forgotPasswordModel.txtCancel}"
                    style="@style/txtPlusJakartaSansromanregular12_1" tools:text="@string/lbl_cancel"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <LinearLayout android:id="@+id/linearColumninputyour"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingEnd="@dimen/_24pxh" android:paddingStart="@dimen/_24pxh">
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtInputyour"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:text="@{forgotPasswordVM.forgotPasswordModel.txtInputyour}"
                style="@style/txtPlusJakartaSansromanregular12" tools:text="@string/msg_input_your_linked"/>
            <EditText android:drawableEnd="@drawable/img_eye"
                android:drawablePadding="@dimen/_30pxh"
                android:ellipsize="end"
                android:hint="@string/lbl_password"
                android:id="@+id/etPassword" android:inputType="text"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_64pxv"
                android:layout_width="match_parent"
                android:lineSpacingExtra="@dimen/_4pxh"
                android:paddingBottom="@dimen/_1pxv"
                android:paddingTop="@dimen/_1pxv"
                android:singleLine="true"
                android:text="@={forgotPasswordVM.forgotPasswordModel.etPasswordValue}"
                android:textColorHint="@color/blue_gray_500"
                style="@style/etPlusJakartaSansromanregular14" tools:ignore="Autofill"/>
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnContinue"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_52pxv"
                android:layout_marginBottom="@dimen/_5pxv"
                android:layout_marginTop="@dimen/_27pxv"
                android:layout_width="@dimen/_327pxh"
                android:paddingBottom="@dimen/_17pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_17pxv"
                android:singleLine="true"
                android:text="@string/lbl_continue"
                android:textAllCaps="false"
                style="@style/btnSolidRounded" tools:text="@string/lbl_continue"/>
        </LinearLayout>
    </LinearLayout>
</layout>
